<resources>
    <string name="app_name">poplibrary</string>

    <!--状态-->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="share_to">分享至</string>

    <!--登录注册-->
    <string name="get_verify">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="phone_tip">请输入手机号</string>
    <string name="phone_username_tip">请输入手机号/用户名</string>
    <string name="verify_tip">请输入验证码</string>
    <string name="pass_tip">请输入密码</string>

    <!--更新-->
    <string name="update_ok">更新</string>
    <string name="update_cancel">暂不更新</string>

    <!--选择地区-->
    <string name="select_location">选择地区</string>
</resources>
