<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pnl_loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_a">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pnl_loginContentRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/corner_white_bg_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pnl_userNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pnl_useruserNameTIE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/profile_icon_username"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_tip"
                android:inputType="number"
                android:maxLength="11" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pnl_userPassTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="false"
            app:counterMaxLength="11"
            app:layout_constraintTop_toBottomOf="@id/pnl_userNameTIL">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pnl_passTIE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/profile_icon_password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/pass_tip"
                android:inputType="textPassword"
                android:maxLength="11" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/pnl_loginTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_blue_bg_shape"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pnl_userPassTIL" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/pnl_loginTv" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>