<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pvtl_loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_a">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pvtl_loginContentRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/corner_white_bg_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pvtl_userNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pvtl_useruserNameTIE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/profile_icon_username"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_tip"
                android:inputType="number"
                android:maxLength="11" />

        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/pvtl_userVerifyCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pvtl_userNameTIL">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pvtl_userVerifyTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="false"
                app:counterMaxLength="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pvtl_passTIE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/profile_icon_verify"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/verify_tip"
                    android:inputType="number"
                    android:maxLength="6" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/pvtl_getVerifyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_blue_bg_shape"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:text="@string/get_verify"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/pvtl_loginTv"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_blue_bg_shape"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pvtl_userVerifyCL" />

        <!--第三方登录-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/pvtl_thirdLoginCL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pvtl_loginTv">

            <ImageView
                android:id="@+id/pvtl_loginWXIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/share_wechat" />

            <ImageView
                android:id="@+id/pvtl_loginQQIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="66dp"
                android:background="@drawable/share_qq"
                app:layout_constraintStart_toEndOf="@id/pvtl_loginWXIv" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/pvtl_thirdLoginCL" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>